2005-01-28 22:50 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Corrected resize problem.
	* GNUmakefile: Added new classes
	* NSColorExtensions.[hm]: Category which allows the persistence
	of a color in the defaults.  Used in TimeMonColors and TimeMonWraps.
	* TimeMonColors.m: Import color extensions.
	* TimeMonWraps.m: Import color extensions.  Get colors from defaults
	in drawArc2() function.

2005-01-28 22:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm
	* GNUmakefile
	* TimeMonColors.m
	* TimeMonWraps.m

2005-01-25 09:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: Removed some of the extra errors and 
	added one which makes sense for how it is reading the
	/proc/stat file now.

2005-01-25 00:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* Percentages.m: Reformatted some code
	* TimeMonColors.m: Reformatter some code
	* TimeMonP.png: Composited icon and "NO" sign
	* TimeMonWraps.m: Changed colors

2005-01-23 22:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/TimeMon.gorm: Added readmeText outlet and 
	connection.
	* GNUmakefile: Added README.rtf as a resource.
	* Percentages.h: Added readmeText outlet
	* Percentages.m: Added awakeFromNib method.
	* README.rtf: Updated with information about the GNUStep port

2005-01-23 19:18 Gregory John Casamento <greg_casamento@yahoo.com>
                 On behalf of Alex Malmberg, suggested the following changes:
	* Percentages.m: Change sizeof(long) to sizeof(CPUTime) after the
	previous change in loadave.h.

2005-01-23 17:28 Gregory John Casamento <greg_casamento@yahoo.com>
                 On behalf of Alex Malmberg, who made the following changes:
	* GNUmakefile: Updated to show all warnings.
	* loadave.c: Rewrote entirely
	* loadave.h: Rewrote entirely
	* Percentages.h: Redefined CPUTime
	* Percentages.m: Removed unecessary conditional.
	* TimeMonColors.m: Added call to setColor.