@@ -1,3 +1,8 @@
+2005-01-28 23:22 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Percentages.m: In [Percentages update] release the representation
+	which is created to avoid a memory leak.
+
 2005-01-28 22:50 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/TimeMon.gorm: Corrected resize problem.
